fixing horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 
 .app{
    text-align: center;
+   position: relative;
+   overflow-x: hidden;
+   height: 100vh;
 }
 
 .app > .header-game{
